fixes line height and button vertical spacing for IE
Summary: -changes line height to 1.25em

Test Plan:
{F152730}
{F152731}

NOTE: this will require two diff to get into adminserv

Reviewers: ccassell, bspoon, sduren

Reviewed By: sduren

Maniphest Tasks: T35155

Differential Revision: https://phab.duosec.org/D22663

--- a/patterns/reference/_modals.scss
+++ b/patterns/reference/_modals.scss
@@ -81,6 +81,15 @@ $animation-duration: 250ms;
     &.before-showing {
         opacity: 0;
     }
+    .c--primary,
+    .button,
+    button {
+        // Fix for IE11 and 10 (Edge works well):
+        @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+            padding-top: .35rem;
+        }
+
+    }
 }
 
 .ie9 .modal {
